--- a/app/src/main/res/layout/slide_menu.xml
+++ b/app/src/main/res/layout/slide_menu.xml
@@ -58,35 +58,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="개인 정보 수정" />
-
-            <Button
-                android:id="@+id/button_finished_trade"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/menubutton"
-                android:text="거래 완료 내역" />
+                android:text="개인 정보 수정"
+                android:onClick="onClickedInMenu"/>
 
             <Button
                 android:id="@+id/button_continue_trade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="진행 중 내역" />
+                android:text="진행 중 내역"
+                android:onClick="onClickedInMenu"/>
+
+            <Button
+                android:id="@+id/button_finished_trade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/menubutton"
+                android:text="거래 완료 내역"
+                android:onClick="onClickedInMenu"/>
 
             <Button
                 android:id="@+id/button_charge_send"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="충전 / 송금" />
+                android:text="충전 / 송금"
+                android:onClick="onClickedInMenu"/>
 
             <Button
                 android:id="@+id/button_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="로그아웃" />
+                android:text="로그아웃"
+                android:onClick="onClickedInMenu"/>
 
         </LinearLayout>
     </ScrollView>
