--- a/app/src/main/res/layout/quest_main.xml
+++ b/app/src/main/res/layout/quest_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10sp"
-    android:visibility="visible">
+    android:visibility="visible"
+    android:id="@+id/quest_drawer">
 
     <ScrollView
         android:layout_width="match_parent"
