--- a/app/src/main/res/layout/slide_menu.xml
+++ b/app/src/main/res/layout/slide_menu.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,10 +31,10 @@
                     android:layout_width="140sp"
                     android:layout_height="140sp"
                     android:layout_margin="10sp"
-                    android:background="@drawable/profile" />
+                    android:background="@drawable/profile"/>
 
                 <TextView
-                    android:id="@+id/text_name"
+                    android:id="@+id/text_userNickName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -42,13 +42,6 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/text_kakaoid"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="yeonhunkim@mensakorea.org"
-                    android:textSize="15sp" />
             </LinearLayout>
 
             <Button
@@ -56,40 +49,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="개인 정보 수정"
-                android:onClick="onClickedInMenu"/>
+                android:onClick="onClickedInMenu"
+                android:text="개인 정보 수정" />
 
             <Button
                 android:id="@+id/button_continue_trade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="진행 중 내역"
-                android:onClick="onClickedInMenu"/>
+                android:onClick="onClickedInMenu"
+                android:text="진행 중 내역" />
 
             <Button
                 android:id="@+id/button_finished_trade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="거래 완료 내역"
-                android:onClick="onClickedInMenu"/>
+                android:onClick="onClickedInMenu"
+                android:text="거래 완료 내역" />
 
             <Button
                 android:id="@+id/button_charge_send"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="충전 / 송금"
-                android:onClick="onClickedInMenu"/>
+                android:onClick="onClickedInMenu"
+                android:text="충전 / 송금" />
 
             <Button
                 android:id="@+id/button_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/menubutton"
-                android:text="로그아웃"
-                android:onClick="onClickedInMenu"/>
+                android:onClick="onClickedInMenu"
+                android:text="로그아웃" />
 
         </LinearLayout>
     </ScrollView>
