Issue #3 [UI 구현] 퀘스트 클릭 시 보기 화면으로 넘어가지 못함
어떤 퀘스트를 클릭하면 그 퀘스트에 대한 정보 보기 화면으로 넘어가야 되는데
구현이 안됨.

--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -70,19 +70,19 @@
         android:inputType="numberSigned" />
 
     <TextView
-        android:id="@+id/text_add_context_header"
+        android:id="@+id/text_add_comment_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="의뢰 내용" />
 
     <EditText
-        android:id="@+id/textbox_add_context"
+        android:id="@+id/textbox_add_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ems="10"
-        android:hint="의뢰의 상세 내용을 적어주세요."
         android:gravity="top"
+        android:hint="의뢰의 상세 내용을 적어주세요."
         android:inputType="textMultiLine" />
 
     <LinearLayout
