--- a/app/src/main/res/layout/slide_menu.xml
+++ b/app/src/main/res/layout/slide_menu.xml
@@ -30,59 +30,72 @@
                     android:id="@+id/image_profile"
                     android:layout_width="140sp"
                     android:layout_height="140sp"
-                    android:layout_margin="10sp"
-                    android:background="@drawable/profile"/>
+                    android:layout_margin="10sp"/>
 
                 <TextView
                     android:id="@+id/text_userNickName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="김연훈"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_marginBottom="10sp"/>
 
             </LinearLayout>
 
             <Button
                 android:id="@+id/button_userinfomodify"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
+                android:textSize="20sp"
                 android:text="개인 정보 수정" />
 
             <Button
                 android:id="@+id/button_continue_trade"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
+                android:textSize="20sp"
                 android:text="진행 중 내역" />
 
             <Button
                 android:id="@+id/button_finished_trade"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
+                android:textSize="20sp"
                 android:text="거래 완료 내역" />
 
             <Button
                 android:id="@+id/button_charge_send"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
+                android:textSize="20sp"
                 android:text="충전 / 송금" />
 
             <Button
                 android:id="@+id/button_logout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
+                android:textSize="20sp"
                 android:text="로그아웃" />
+
+            <Button
+                android:id="@+id/button_exit"
+                android:layout_width="match_parent"
+                android:layout_height="60sp"
+                android:background="@drawable/menubutton"
+                android:onClick="onClickedInMenu"
+                android:textSize="20sp"
+                android:text="나가기" />
 
         </LinearLayout>
     </ScrollView>
