카카오톡 로그인, 로그아웃 가능 프로필 사진 가져오기 가능 로컬에서 퀘스트 추가, 삭제, 조회 가능
개인정보 수정, 결제 및 송금 미구현

--- a/app/src/main/res/layout/quest_main.xml
+++ b/app/src/main/res/layout/quest_main.xml
@@ -15,8 +15,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:clickable="true"
-            android:onClick="onClickedQuestEntry">
+            android:clickable="true">
         </LinearLayout>
     </ScrollView>
 
