채팅 인터페이스 구현 완료
카카오페이 api와 서버 연동 공부할 예정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,10 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.hyojung.quest.MainActivity">
 
-    <include layout="@layout/quest_main" />
+    <include
+        layout="@layout/quest_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
