[UI 구현] 채팅 인터페이스 수정 말풍선의 너비가 화면을 꽉 채우지 않도록 조절함.

--- a/app/src/main/res/layout/quest_chat.xml
+++ b/app/src/main/res/layout/quest_chat.xml
@@ -7,6 +7,7 @@
 
 
     <ScrollView
+        android:id="@+id/chat_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -40,7 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="전송" />
+            android:text="전송"
+            android:onClick="onClick"/>
         </LinearLayout>
 
 </LinearLayout>
