--- a/app/src/main/res/layout/chat_other_balloon.xml
+++ b/app/src/main/res/layout/chat_other_balloon.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/chat_totalchatbox"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="3sp">
+    android:layout_margin="3sp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:background="@drawable/profile" />
 
         <LinearLayout
+            android:id="@+id/chat_text_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
