--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.hyojung.quest.MainActivity">
+    tools:context="com.example.hyojung.quest.Activity.MainActivity">
 
     <include
         layout="@layout/quest_main"
