--- a/app/src/main/res/layout/quest_view.xml
+++ b/app/src/main/res/layout/quest_view.xml
@@ -43,7 +43,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button_viewArea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="GPS" />
