--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,11 +10,19 @@
 
     <ImageView
         android:id="@+id/quest_door"
-        android:layout_width="360dp"
-        android:layout_height="455dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_weight="1"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@drawable/profile" />
+
+    <Button
+        android:id="@+id/button_admin_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/menubutton"
+        android:text="관리자 로그인"
+        android:textSize="30sp" />
 
     <com.kakao.usermgmt.LoginButton
         android:layout_width="match_parent"
