--- a/app/src/main/res/layout/slide_menu.xml
+++ b/app/src/main/res/layout/slide_menu.xml
@@ -30,16 +30,16 @@
                     android:id="@+id/image_profile"
                     android:layout_width="140sp"
                     android:layout_height="140sp"
-                    android:layout_margin="10sp"/>
+                    android:layout_margin="10sp" />
 
                 <TextView
                     android:id="@+id/text_userNickName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="10sp"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -49,26 +49,35 @@
                 android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="개인 정보 수정" />
+                android:text="개인 정보 수정"
+                android:textSize="20sp" />
 
             <Button
-                android:id="@+id/button_continue_trade"
+                android:id="@+id/button_uploadedQuest"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="진행 중 내역" />
+                android:text="수락 가능 목록"
+                android:textSize="20sp" />
 
             <Button
-                android:id="@+id/button_finished_trade"
+                android:id="@+id/button_continueQuest"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="거래 완료 내역" />
+                android:text="진행중 목록"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/button_completeQuest"
+                android:layout_width="match_parent"
+                android:layout_height="60sp"
+                android:background="@drawable/menubutton"
+                android:onClick="onClickedInMenu"
+                android:text="거래 완료 목록"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/button_charge_send"
@@ -76,8 +85,8 @@
                 android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="충전 / 송금" />
+                android:text="충전 / 송금"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/button_logout"
@@ -85,8 +94,8 @@
                 android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="로그아웃" />
+                android:text="로그아웃"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/button_exit"
@@ -94,17 +103,8 @@
                 android:layout_height="60sp"
                 android:background="@drawable/menubutton"
                 android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="나가기" />
-
-            <Button
-                android:id="@+id/button_developer_test"
-                android:layout_width="match_parent"
-                android:layout_height="60sp"
-                android:background="@drawable/menubutton"
-                android:onClick="onClickedInMenu"
-                android:textSize="20sp"
-                android:text="개발자 테스트용" />
+                android:text="나가기"
+                android:textSize="20sp" />
 
         </LinearLayout>
     </ScrollView>
