[기능 구현] 메인 화면에서 당겨서 새로고침 추가

--- a/app/src/main/res/layout/quest_main.xml
+++ b/app/src/main/res/layout/quest_main.xml
@@ -6,18 +6,23 @@
     android:clickable="true"
     android:id="@+id/quest_drawer">
 
-    <ScrollView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:id="@+id/quest_main_layout"
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_layout">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:clickable="true">
-        </LinearLayout>
-    </ScrollView>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:id="@+id/quest_main_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:clickable="true">
+            </LinearLayout>
+        </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <include
         android:id="@+id/slide_menu"
