--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -8,23 +8,38 @@
     android:orientation="vertical"
     android:layout_margin="20sp">
 
-    <ImageView
-        android:id="@+id/quest_door"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_weight="1"
-        tools:srcCompat="@drawable/profile" />
-
     <Button
         android:id="@+id/button_admin_login"
-        android:layout_width="match_parent"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/star"
+        />
+    <LinearLayout
+        android:layout_marginTop="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/menubutton"
-        android:text="관리자 로그인"
-        android:textSize="30sp" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+        <ImageView
+            android:id="@+id/quest_door"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:background="@drawable/icon"
+            />
+        <ImageView
+
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:background="@drawable/name"
+            />
+    </LinearLayout>
+
+
 
     <com.kakao.usermgmt.LoginButton
+        android:layout_marginBottom="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
