--- a/app/src/main/res/layout/quest_entry.xml
+++ b/app/src/main/res/layout/quest_entry.xml
@@ -1,78 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/quest_entry"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="10sp"
     android:layout_marginBottom="10sp"
     android:layout_marginLeft="20sp"
     android:layout_marginRight="20sp"
-    android:padding="10sp"
-    android:background="#FFFFAA"
-    android:id="@+id/quest_entry">
+    android:layout_marginTop="10sp"
 
+    android:orientation="horizontal"
+    >
+
+    <ImageView
+        android:background="@drawable/tool2"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/star"
+        android:layout_width="90dp"
+        android:layout_height="90dp" />
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:duplicateParentState="true">
+        android:layout_height="100dp">
 
         <TextView
             android:id="@+id/text_entry_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:duplicateParentState="true"/>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:duplicateParentState="true">
-
-        <TextView
-            android:id="@+id/position_header"
-            android:layout_width="60sp"
-            android:layout_height="wrap_content"
-            android:text="위치 : "
-            android:textSize="15sp"
-            android:duplicateParentState="true"/>
-
-        <TextView
-            android:id="@+id/text_entry_area"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:textSize="15sp"
-            android:duplicateParentState="true"/>
-    </LinearLayout>
+            android:duplicateParentState="true"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:duplicateParentState="true">
 
-        <TextView
-            android:id="@+id/reward_header"
-            android:layout_width="60sp"
-            android:layout_height="wrap_content"
-            android:text="사례금 : "
-            android:textSize="15sp"
-            android:duplicateParentState="true"/>
-
-        <TextView
-            android:id="@+id/text_entry_reward"
+        <LinearLayout
+            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="15sp"
-            android:duplicateParentState="true"/>
+            android:layout_height="0dp"
+            android:duplicateParentState="true"
+            android:background="@drawable/underbar"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/position_header"
+                android:layout_width="80sp"
+                android:layout_height="wrap_content"
+                android:duplicateParentState="true"
+                android:fontFamily="@font/font"
+                android:text="위치 : "
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/text_entry_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:duplicateParentState="true"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="@drawable/underbar"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:duplicateParentState="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/reward_header"
+                android:layout_width="80sp"
+                android:layout_height="wrap_content"
+                android:duplicateParentState="true"
+                android:text="사례금 : "
+                android:fontFamily="@font/font"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/text_entry_reward"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:duplicateParentState="true"
+                android:textSize="20sp" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
