add quest design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#dba070</color>
+    <color name="simple">#f1dea7</color>
     <color name="colorPrimaryDark">#6d6d6d</color>
     <color name="colorAccent">#a32621</color>
 </resources>
