--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -1,108 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="30sp">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_add_quest_header"
+    <android.support.constraint.ConstraintLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="퀘스트 등록"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/text_add_title_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="제목" />
-
-    <EditText
-        android:id="@+id/textbox_add_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="의뢰 제목"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/text_add_area_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="위치" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/text_point"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="의뢰 요청 희망 위치"
-            android:inputType="text" />
-
-        <Button
-            android:id="@+id/button_addPoint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="GPS" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/text_add_reward_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="사례금" />
-
-    <EditText
-        android:id="@+id/textbox_add_reward"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="사례금 입력"
-        android:inputType="numberSigned" />
-
-    <TextView
-        android:id="@+id/text_add_comment_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="의뢰 내용" />
-
-    <EditText
-        android:id="@+id/textbox_add_comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:gravity="top"
-        android:hint="의뢰의 상세 내용을 적어주세요."
-        android:inputType="textMultiLine" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_add_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="등록"/>
+        android:layout_height="50dp">
 
         <Button
             android:id="@+id/button_add_exit"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/pre_color" />
+
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="취소"/>
+            android:layout_height="50dp"
+            android:fontFamily="@font/work"
+            android:paddingTop="5dp"
+            android:text="요청하기"
+            android:textColor="@color/simple"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="10dp"
+            android:src="@drawable/star"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_weight="15"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/button_addPoint"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+
+                    android:background="@drawable/round_tool" />
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/gps"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_add_title_header"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="22dp"
+                        android:fontFamily="@font/work"
+                        android:text="제목"
+                        android:textSize="10dp" />
+
+                    <EditText
+                        android:id="@+id/textbox_add_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="6dp"
+                        android:background="@drawable/round_gray"
+
+                        android:ems="10"
+                        android:fontFamily="@font/work"
+                        android:hint="의뢰 제목"
+
+                        android:inputType="textPersonName"
+                        android:paddingLeft="20dp" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_add_area_header"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="22dp"
+                        android:fontFamily="@font/work"
+                        android:text="위치"
+
+                        android:textSize="10dp" />
+
+                    <EditText
+                        android:id="@+id/text_point"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="6dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/round_gray"
+                        android:ems="10"
+                        android:fontFamily="@font/work"
+                        android:hint="의뢰 요청 희망 위치"
+
+                        android:inputType="text"
+                        android:paddingLeft="20dp" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_add_reward_header"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="22dp"
+                        android:fontFamily="@font/work"
+                        android:text="사례금"
+                        android:textSize="10dp" />
+
+                    <EditText
+                        android:id="@+id/textbox_add_reward"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="6dp"
+                        android:background="@drawable/round_gray"
+                        android:ems="10"
+                        android:fontFamily="@font/work"
+                        android:hint="사례금 입력"
+                        android:inputType="numberSigned"
+                        android:paddingLeft="20dp" />
+
+                </FrameLayout>
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:fontFamily="@font/work"
+                android:id="@+id/text_add_comment_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="5dp"
+                android:text="의뢰 내용" />
+
+            <EditText
+                android:background="@drawable/round_gray"
+                android:id="@+id/textbox_add_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:gravity="top"
+                android:padding="50dp"
+                android:fontFamily="@font/work"
+                android:hint="의뢰의 상세 내용을 적어주세요."
+                android:inputType="textMultiLine" />
+        </FrameLayout>
+
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_add_submit"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_weight="1.5"
+        android:background="@color/simple"
+        android:fontFamily="@font/work"
+        android:text="S U B M I T"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
+
 </LinearLayout>
