[기능 구현] 양쪽이 모두 완료 및 파기 동의해야 다음 단계로 넘어가도록 구현

--- a/app/src/main/res/layout/select_position.xml
+++ b/app/src/main/res/layout/select_position.xml
@@ -35,6 +35,6 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:context="com.example.hyojung.quest.Activity.AddPositionActivity"
+        tools:context="com.example.hyojung.quest.com.hyojung.quest.Activity.AddPositionActivity"
         android:layout_weight="1" />
 </LinearLayout>
