--- a/app/src/main/res/layout/user_point_view.xml
+++ b/app/src/main/res/layout/user_point_view.xml
@@ -28,11 +28,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/text_kakaopay_point"
+            android:id="@+id/text_quest_point"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="10000원"
+            android:text="10000"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -47,6 +47,6 @@
         android:id="@+id/button_point_charge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="카카오페이 충전 " />
+        android:text="10000원 충전(구글 인앱 결제)" />
 
 </LinearLayout>
