--- a/app/src/main/res/layout/quest_main.xml
+++ b/app/src/main/res/layout/quest_main.xml
@@ -7,23 +7,23 @@
     android:id="@+id/quest_drawer">
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/swipe_layout">
+        android:layout_height="match_parent">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
                 android:id="@+id/quest_main_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clickable="true"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:clickable="true">
-            </LinearLayout>
+                android:orientation="vertical"></LinearLayout>
         </ScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
-
     <include
         android:id="@+id/slide_menu"
         layout="@layout/slide_menu" />
